--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Angular Application</title>
 </head>
 <body>
+    <div ng-app="app">
+      <div ng-controller="MainController">
+          <h1>{{name}}</h1>
+          <h3>Email: {{email}}</h3>
+          <h3>Phone: {{phone}}</h3>
+      </div>
+    </div>
 
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
